--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
 - conda info -a
 script:
 - set -e
+- export NXF_ANSI_LOG=false
 - mkdir ./test_init
 - cd    ./test_init
 - nextflow run ../CnR-flow.nf --mode initiate
