--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ install:
 - conda update -q conda
 - conda info -a
 script:
-- set -e
-- ls *
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then ; set -e ; fi
+- if [ "$TRAVIS_OS_NAME" = "osx"   ]; then ; ls ; ls * ; fi
 - export NXF_ANSI_LOG=false
 - mkdir ./test_init
 - cd    ./test_init
