--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ script:
 - bash dl_data.sh
 - nextflow run ./subsample_data.nf
 - cp nextflow.config.step1 nextflow.config
-- nextflow ../CnR-flow.nf --mode prep_fasta
+- nextflow ../CnR-flow.nf --verbose --mode prep_fasta
 - cp nextflow.config.step2 nextflow.config
-- nextflow ../CnR-flow.nf --mode run
+- nextflow ../CnR-flow.nf --verbose --mode run
 - cp nextflow.config.step3 nextflow.config
 - nextflow ../CnR-flow.nf --mode run
