--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ install:
 
 cache:
   directories:
-  - test_pipe/raw_data
   - test_pipe/subsampled_data
   - test_pipe/test_reference
+  timeout: 1800
 
 jobs:
   allow_failures:
@@ -75,11 +75,11 @@ jobs:
         - ls
         - cp nextflow.config.step3 nextflow.config
         - travis_wait nextflow ../CnR-flow.nf --mode run
-      name: Test_Pipe_Treat_Ctrl
+      name: Treat_Ctrl
     - script:
         - cd test_pipe
         - ls
         - cp nextflow.config.step3 nextflow.config
         - travis_wait nextflow ../CnR-flow.nf --mode run
-      name: Test_Pipe_Treat_Ctrl
+      name: Treat_Ctrl
       os: osx
