--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,20 @@
 language: bash
+
 os:
 - linux
 - osx
+
 jdk:
 - openjdk8
+
 branches:
   only:
   - master
+
+jobs:
+  allow_failures:
+  - os: osx
+
 install:
 - mkdir ./programs ; cd ./programs ; export PATH=$PATH:$PWD
 - curl -fsSL https://get.nextflow.io | bash
@@ -21,72 +29,20 @@ install:
 - conda config --set always_yes yes --set changeps1 no
 - conda update -q conda
 - conda info -a
+
+script:
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then set -e ; fi
 - export NXF_ANSI_LOG=false
 - mkdir ./test_init
 - cd    ./test_init
 - nextflow run ../CnR-flow.nf --mode initiate
-- cd ..
+- nextflow run ../CnR-flow.nf --mode validate_all
+- cd ../test_pipe
+- cat test_notes.txt
+- ./setup_reference.sh
+- ./dl_prep_data.sh
+- nextflow ../CnR-flow.nf --verbose --mode prep_fasta
+- nextflow ../CnR-flow.nf --verbose --mode run
+- cp nextflow.config.step2 nextflow.config
+- nextflow ../CnR-flow.nf --verbose --mode run
 
-
-script:
-  - cd ./test_init
-  - nextflow run ../CnR-flow.nf --mode validate_all
-
-cache:
-  directories:
-  - test_pipe/subsampled_data
-  - test_pipe/test_reference
-  timeout: 1800
-
-jobs:
-  allow_failures:
-  - os: osx
-  include:
-    - stage: Setup_Pipe_Test
-      script:
-        - cd test_pipe
-        - cat test_notes.txt
-        - ./setup_reference.sh
-        - ./dl_prep_data.sh
-        - nextflow ../CnR-flow.nf --verbose --mode prep_fasta
-    - script:
-        - cd test_pipe
-        - cat test_notes.txt
-        - ./setup_reference.sh
-        - ./dl_prep_data.sh
-        - nextflow ../CnR-flow.nf --verbose --mode prep_fasta
-      os: osx
-    - stage: Run_Pipe_Test
-      name: Treat
-      jdk: openjdk8
-      script:
-        - cd test_pipe
-        - ls
-        - cat test_notes.txt
-        - nextflow ../CnR-flow.nf --verbose --mode run
-    - script:
-        - cd test_pipe
-        - ls
-        - cat test_notes.txt
-        - nextflow ../CnR-flow.nf --verbose --mode run
-      os: osx
-      name: Treat
-      jdk: openjdk8
-    - script:
-        - cd test_pipe
-        - ls
-        - cat test_notes.txt
-        - cp nextflow.config.step2 nextflow.config
-        - nextflow ../CnR-flow.nf --verbose --mode run
-      name: Treat_Ctrl
-      jdk: openjdk8
-    - script:
-        - cd test_pipe
-        - ls
-        - cat test_notes.txt
-        - cp nextflow.config.step2 nextflow.config
-        - nextflow ../CnR-flow.nf --verbose --mode run
-      name: Treat_Ctrl
-      jdk: openjdk8
-      os: osx
