--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ install:
 - curl -fsSL https://get.nextflow.io | bash
 - cd ..
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
-  -O miniconda.sh; MYENV=linux; fi
+  -O miniconda.sh; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ];   then curl https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh
-  -o miniconda.sh; MYENV=OSX; fi
+  -o miniconda.sh; fi
 - bash miniconda.sh -b -p $HOME/miniconda
 - source "$HOME/miniconda/etc/profile.d/conda.sh"
 - hash -r
