Autotest validation retry

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ script:
 - mkdir ./test_init
 - cd    ./test_init
 - nextflow run ../CnR-flow.nf --mode initiate
+- travis_retry nextflow run ../CnR-flow.nf --mode validate_all
 - nextflow run ../CnR-flow.nf --mode validate_all
 - cd ../test_pipe
 - cat test_notes.txt
