--- a/test_pipe/nextflow.config
+++ b/test_pipe/nextflow.config
@@ -4,4 +4,7 @@ params {
     norm_ref_fasta = "${projectDir}/ref_dbs/GCF_000005845.2_ASM584v2_genomic.fna.gz"
     refs_dir       = "${launchDir}/test_reference"
     treat_fastqs   = ["subsampled_data/SRR6128978_{1,2}_*"] 
+    withName: CnR_S5_B_Peaks_SEACR {
+        errorStrategy = 'ignore'
+    }
 }
