--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,8 @@ install:
 - mkdir ./programs ; cd ./programs ; export PATH=$PATH:$PWD
 - curl -fsSL https://get.nextflow.io | bash
 - cd ..
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
-  -O miniconda.sh; fi
-- if [ "$TRAVIS_OS_NAME" = "osx" ];   then curl https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh
-  -o miniconda.sh; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then wget --progress=dot --retry-connrefused https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh; fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ];   then curl https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -o miniconda.sh; fi
 - bash miniconda.sh -b -p $HOME/miniconda
 - source "$HOME/miniconda/etc/profile.d/conda.sh"
 - hash -r
