--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ script:
 - ./dl_prep_data.sh
 - nextflow ../CnR-flow.nf --verbose --mode prep_fasta
 - nextflow ../CnR-flow.nf --verbose --mode run
+- find ./cnr_output/logs/ -maxdepth 1 | sort | cat
 - cp nextflow.config.step2 nextflow.config
 - nextflow ../CnR-flow.nf -resume --verbose --mode run
 
