--- a/test_pipe/nextflow.config
+++ b/test_pipe/nextflow.config
@@ -7,6 +7,8 @@ params {
     treat_fastqs   = ["subsampled_data/SRR6128978_{1,2}_*"] 
 }
 process {
+    memory = "4 GB"
+    cpus = 2
     withName: CnR_S5_B_Peaks_SEACR {
         errorStrategy = 'ignore'
     }
