--- a/nextflow.config
+++ b/nextflow.config
@@ -163,7 +163,7 @@ params {
     
     // --Trimmomatic Adapter Path, Downloaded after "nextflow CnR-flow --mode initiate"
     trimmomatic_adapterpath = "${projectDir}/ref_dbs/trimmomatic_adapters/TruSeq3-PE-2.fa"
-    trimmomatic_settings    = "ILLUMINACLIP:${params.trimmomatic_adapterpath}/Truseq3.PE.fa:2:15:4:4:true LEADING:20 TRAILING:20 SLIDINGWINDOW:4:15 MINLEN:25"
+    trimmomatic_settings    = "ILLUMINACLIP:${params.trimmomatic_adapterpath}:2:15:4:4:true LEADING:20 TRAILING:20 SLIDINGWINDOW:4:15 MINLEN:25"
     trimmomatic_flags       = "-phred33"
     // kseq_test (CUTRUNTools) Retrim Settings
     input_seq_len  = 'auto'  // Length of untrimmed sequence reads (Ex: '150') or 'auto'
@@ -204,7 +204,7 @@ params {
     log_dir          = 'logs'
     merge_fastqs_dir = 'S0_B_merged_reads'
     fastqc_pre_dir   = 'S0_C_FastQC_pre'
-    trim_dir         = 'S1_A_fastq_trimomatic'
+    trim_dir         = 'S1_A_fastq_trimmomatic'
     retrim_dir       = 'S1_B_fastq_kseqtest'
     fastqc_post_dir  = 'S1_C_FastQC_post'
     aln_dir_ref      = 'S2_A_aln_ref'
