--- a/test_pipe/nextflow.config
+++ b/test_pipe/nextflow.config
@@ -4,6 +4,7 @@ params {
     norm_ref_fasta = "${projectDir}/ref_dbs/GCF_000005845.2_ASM584v2_genomic.fna.gz"
     refs_dir       = "${launchDir}/test_reference"
     aln_ref_flags  = "--very-sensitive --phred33 -I 10 -X 700 --dovetail --no-unal --no-mixed --no-discordant"
+    aln_norm_flags = params.aln_ref_flags
     treat_fastqs   = ["subsampled_data/SRR6128978_{1,2}_*"] 
 }
 process {
